# context-visualizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVLOG.md  LICENSE  README.md  context-forge-structure.json  index.html  mcp-config.example.json  mcp_client.py  orchestration-structure.json  parse.py  parse_project.py  project-structure-viz.jsx  pyproject.toml  serve.py  theme.js
.claude/rules/: dart.md  flutter.md
project-documents/user/analysis/: 940-analysis.context-visualizer.md
project-documents/user/architecture/: 100-arch.file-updates-and-organization.md  100-slices.file-updates-and-organization.md  105-arch.project-management.md  105-slices.project-management.md  110-arch.worktree-view.md  110-slices.worktree-view.md  120-arch.project-management.md  120-slices.project-management.md  140-arch.worktree-view.md  140-slices.worktree-view.md
project-documents/user/project-guides/: 001-concept.context-visualizer.md  999-guide.react-ui-testing.md
project-documents/user/reviews/: 125-review.slice.project-list-organization.md  125-review.tasks.project-list-organization.md  126-review.slice.cross-project-dashboard-view.md  127-review.slice.mcp-native-project-registry.md  127-review.tasks.mcp-native-project-registry.md
project-documents/user/slices/: 100-slice.data-externalization.md  (+18 more)
projects/: context-forge-structure.json  context-visualizer-structure.json  manifest.json  orchestration-structure.json
tests/: conftest.py  test_mcp_client.py  test_parse.py  test_serve.py  test_theme.py  test_ui_dashboard.py  test_ui_discover.py  test_ui_project_org.py  test_ui_smoke.py
(+19 files in other folders)
