[project]
name = "context-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.0",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end browser tests (require playwright)",
]
