[project]
name = "context-visualizer"
version = "0.2.3"
description = "Interactive dashboard for Context Forge projects — visualize initiatives, slices, and documents across your project portfolio"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["context-forge", "project-management", "visualization", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ecorkran/context-visualizer"
Repository = "https://github.com/ecorkran/context-visualizer"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.0",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end browser tests (require playwright)",
]
